--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "tailwind-watch": "tailwindcss build -i resources/css/site.css -o public/css/style.css --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +42,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.4.3"
   }
 }
